git-annex (4.20131102) UNRELEASED; urgency=low

  * Improve local pairing behavior when two computers both try to start
    the pairing process separately.

 -- Joey Hess <joeyh@debian.org>  Sat, 02 Nov 2013 14:54:36 -0400

git-annex (4.20131101) unstable; urgency=low

  * The "git annex content" command is renamed to "git annex wanted".
  * New --want-get and --want-drop options which can be used to
    test preferred content settings.
    For example, "git annex find --in . --want-drop"
  * assistant: When autostarted, wait 5 seconds before running the startup
    scan, to avoid contending with the user's desktop login process.
  * webapp: When setting up a bare shared repository, enable non-fast-forward
    pushes.
  * sync: Show a hint about receive.denyNonFastForwards when a push fails.
  * directory, webdav: Fix bug introduced in version 4.20131002 that
    caused the chunkcount file to not be written. Work around repositories
    without such a file, so files can still be retreived from them.
  * assistant: Automatically repair damanged git repository, if it can
    be done without losing data.
  * assistant: Support repairing git remotes that are locally accessible
    (eg, on removable drives).
  * add: Fix reversion in 4.20130827 when adding unlocked files that have
    not yet been committed.
  * unannex: New, much slower, but more safe behavior: Copies files out of
    the annex. This avoids an unannex of one file breaking other files that
    link to the same content. Also, it means that the content
    remains in the annex using up space until cleaned up with 
    "git annex unused".
    (The behavior of unannex --fast has not changed; it still hard links
    to content in the annex. --fast was not made the default because it is
    potentially unsafe; editing such a hard linked file can unexpectedly
    change content stored in the annex.)

 -- Joey Hess <joeyh@debian.org>  Fri, 01 Nov 2013 11:34:27 -0400

git-annex (4.20131024) unstable; urgency=low